fix: fix overlapping over logo (#383)
fix start learning with edx text overlapping over logo.

VAN-606

--- a/src/redesign/_style.scss
+++ b/src/redesign/_style.scss
@@ -709,3 +709,9 @@ select.form-control {
   margin-top: 0.188rem !important;
   line-height: 1.25rem;
 }
+
+@media (max-height: 500px) {
+  .large-screen-svg-line, .large-heading {
+    margin-top: 5rem;
+  }
+}
